--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.2",
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.3"
   }
 }
