--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.8.0",
+    "@types/node": "^17.0.2",
     "@types/react": "^18.0.21",
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
-    "prettier": "^2.7.1",
     "typescript": "^4.6.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
