--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^3",
-    "@thirdweb-dev/sdk": "^3",
-    "ethers": "^5.6.4",
-    "next": "^12.1.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@thirdweb-dev/react": "3.6.8",
+    "@thirdweb-dev/sdk": "3.6.8",
+    "ethers": "5.7.2",
+    "next": "12.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.2",
-    "@types/react": "^18.0.21",
-    "eslint": "^8.14.0",
-    "eslint-config-next": "^12.1.5",
-    "typescript": "^4.6.3"
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
+    "eslint": "8.30.0",
+    "eslint-config-next": "12.3.4",
+    "prettier": "2.8.1",
+    "typescript": "4.9.4"
   },
   "engines": {
     "node": ">=16.0.0"
